--- a/_quarto.yml
+++ b/_quarto.yml
@@ -21,6 +21,14 @@ bibliography: references.bib
 format:
   html:
     theme: cosmo
+    link-external-icon: true
+    link-external-newwindow: true
+    css: styles.css
+    markdown: default
+    
+toc-title: On this page
+      
+number-sections: true
 
 
 
