--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,6 +3,7 @@ project:
   output-dir: docs
   resources:
     - images
+    - data/alum-first-job.csv
 
 book:
   title: "Strategic Management Program Guide"
