add leland and mc links

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -24,6 +24,8 @@ bibliography: references.bib
 
 format:
   html:
+    include-in-header: _header.html
+    include-after-body: _footer.html
     theme: cosmo
     link-external-newwindow: true
     css: styles.css
